# py-prettier-xethhung12

./: .gitignore  README.md  build-and-deploy.sh  build.sh  dev-requirements.txt  export-deployment-keys.sh  install-dependencies.sh  pyproject.toml  requirements.txt
src/py_prettier_xethhung12/: __init__.py  __main__.py  _module_prettier.py
src/py_prettier_xethhung12/_cmd/: run.py
