[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "py_prettier_xethhung12"
version = "1.0.1"
authors = [
  { name="Xeth Hung", email="admin@xethh.me" },
]
description = "A CLI tool to format XML, HTML, and JSON with support for stdin, files, and clipboard"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "j-vault-http-client-xethhung12 >= 0.1.1",
    "beautifulsoup4 >= 4.12.0",
    "pyperclip >= 1.8.2"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_prettier_xethhung12"]

[project.scripts]
py-prettier-xethhung12="py_prettier_xethhung12._cmd.run:main"

